# concour-bench

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
examples/: sample_data.csv  sample_output.txt  sample_report.txt
src/: CMakeLists.txt  bench_process.h  bench_process_unix.c  bench_process_win.c  bench_single.c  bench_single.h  bench_thread.c  bench_thread.h  dataset.c  dataset.h  error.c  error.h  input.c  input.h  main.c  output.c  output.h  platform.h  platform_unix.c  platform_win.c  stats.c  stats.h  types.h  worker.c  worker.h
